Fixed the spacing in the gallery section

--- a/css/index.css
+++ b/css/index.css
@@ -74,7 +74,7 @@ h1 {
 }
 
 h2 {
-    font-size: 6rem;
+    font-size: 4.8rem;
 }
 
 h3 {
@@ -101,15 +101,27 @@ header div {
 }
 h1 a {
     font-size: 85%;
+    
 }
 .links {
     display: flex;
     justify-content: space-between;
     padding-left: 15%;
     padding-right: 15%;
+    
 }
 .links a {
     font-size: 2.5rem;
+    
+}
+.socialmedia {
+    font-size: 3.3rem;
+    display: flex;
+    width: 15%;
+    justify-content: space-between;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1%;
 }
 /* spacers */
 .spacer {
@@ -133,8 +145,10 @@ h1 a {
 }
 .row {
     display: flex;
-    justify-content: space-evenly;
-    padding: 20px;
+    justify-content: space-between;
+    padding-left: 14%;
+    padding-right: 14%;
+    padding-top: 2%;
 }
 
 /* about us section */
